--- a/visualization.ipynb
+++ b/visualization.ipynb
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1642,6 +1642,434 @@
     "if __name__ == \"__main__\":\n",
     "    file_path = \"data/harmful/civitai/civitai_nsfw_prompts_2000_classified.json\"\n",
     "    result = analyze_categories(file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filtered data saved to data/harmful/4chan/4chan_filtered_harmful.json\n",
+      "\n",
+      "Filtered Category distribution:\n",
+      "                            Category  Count\n",
+      "2                       hate content     88\n",
+      "4          nudity and sexual content     28\n",
+      "3  discrimination and disinformation      6\n",
+      "1                           shocking      4\n",
+      "0                   illegal activity      3\n",
+      "5                         harassment      1\n",
+      "\n",
+      "Percentage distribution of filtered categories:\n",
+      "                            Category  Count  Percentage\n",
+      "2                       hate content     88       67.69\n",
+      "4          nudity and sexual content     28       21.54\n",
+      "3  discrimination and disinformation      6        4.62\n",
+      "1                           shocking      4        3.08\n",
+      "0                   illegal activity      3        2.31\n",
+      "5                         harassment      1        0.77\n",
+      "\n",
+      "Total number of filtered prompts: 129\n",
+      "Original number of prompts: 500\n",
+      "Percentage of harmful content: 25.80%\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import pandas as pd\n",
+    "from collections import Counter\n",
+    "\n",
+    "def filter_harmful_categories(file_path, output_path=None):\n",
+    "    # Categories to filter\n",
+    "    target_categories = [\n",
+    "        \"hate content\", \n",
+    "        \"nudity and sexual content\", \n",
+    "        \"discrimination and disinformation\", \n",
+    "        \"shocking\", \n",
+    "        \"illegal activity\"\n",
+    "    ]\n",
+    "    \n",
+    "    # Load the JSON data\n",
+    "    with open(file_path, 'r', encoding='utf-8') as f:\n",
+    "        data = json.load(f)\n",
+    "    \n",
+    "    # Filter prompts that contain the target categories\n",
+    "    filtered_prompts = []\n",
+    "    for prompt in data[\"prompts\"]:\n",
+    "        categories = prompt.get(\"category\", [])\n",
+    "        # Check if any of the target categories are in this prompt's categories\n",
+    "        if any(category in target_categories for category in categories):\n",
+    "            filtered_prompts.append(prompt)\n",
+    "    \n",
+    "    # Create a new JSON object with filtered prompts\n",
+    "    filtered_data = {\n",
+    "        \"prompts\": filtered_prompts\n",
+    "    }\n",
+    "    \n",
+    "    # Save the filtered data to a new file if output_path is provided\n",
+    "    if output_path:\n",
+    "        with open(output_path, 'w', encoding='utf-8') as f:\n",
+    "            json.dump(filtered_data, f, ensure_ascii=False, indent=4)\n",
+    "        print(f\"Filtered data saved to {output_path}\")\n",
+    "    \n",
+    "    # Count occurrences of each category in the filtered data\n",
+    "    all_categories = []\n",
+    "    for prompt in filtered_prompts:\n",
+    "        categories = prompt.get(\"category\", [])\n",
+    "        all_categories.extend(categories)\n",
+    "    \n",
+    "    category_counts = Counter(all_categories)\n",
+    "    \n",
+    "    # Convert to DataFrame for analysis\n",
+    "    df = pd.DataFrame({\n",
+    "        'Category': list(category_counts.keys()),\n",
+    "        'Count': list(category_counts.values())\n",
+    "    })\n",
+    "    \n",
+    "    # Sort by count in descending order\n",
+    "    df = df.sort_values('Count', ascending=False)\n",
+    "    \n",
+    "    # Print table of filtered category counts\n",
+    "    print(\"\\nFiltered Category distribution:\")\n",
+    "    print(df)\n",
+    "    \n",
+    "    # No visualization\n",
+    "    \n",
+    "    # Calculate percentages\n",
+    "    total = sum(category_counts.values())\n",
+    "    df['Percentage'] = (df['Count'] / total * 100).round(2)\n",
+    "    print(\"\\nPercentage distribution of filtered categories:\")\n",
+    "    print(df[['Category', 'Count', 'Percentage']])\n",
+    "    \n",
+    "    print(f\"\\nTotal number of filtered prompts: {len(filtered_prompts)}\")\n",
+    "    print(f\"Original number of prompts: {len(data['prompts'])}\")\n",
+    "    print(f\"Percentage of harmful content: {(len(filtered_prompts) / len(data['prompts']) * 100):.2f}%\")\n",
+    "    \n",
+    "    return filtered_data, df\n",
+    "\n",
+    "# Usage\n",
+    "if __name__ == \"__main__\":\n",
+    "    file_path = \"data/harmful/4chan/4chan_translate_labeled.json\"\n",
+    "    output_path = \"data/harmful/4chan/4chan_filtered_harmful.json\"\n",
+    "    filtered_data, result = filter_harmful_categories(file_path, output_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filtered data saved to data/harmful/VBCDE/VBCDE_filtered_harmful.json\n",
+      "\n",
+      "Filtered Category distribution:\n",
+      "                    Category  Count\n",
+      "1               hate content     38\n",
+      "2  nudity and sexual content     35\n",
+      "0           illegal activity     29\n",
+      "\n",
+      "Percentage distribution of filtered categories:\n",
+      "                    Category  Count  Percentage\n",
+      "1               hate content     38       37.25\n",
+      "2  nudity and sexual content     35       34.31\n",
+      "0           illegal activity     29       28.43\n",
+      "\n",
+      "Total number of filtered prompts: 101\n",
+      "Original number of prompts: 113\n",
+      "Percentage of harmful content: 89.38%\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import pandas as pd\n",
+    "from collections import Counter\n",
+    "\n",
+    "def filter_vbcde_harmful_categories(file_path, output_path=None):\n",
+    "    # Categories to filter based on the VBCDE dataset\n",
+    "    target_categories = [\n",
+    "        \"hate content\", \n",
+    "        \"nudity and sexual content\", \n",
+    "        \"illegal activity\"\n",
+    "    ]\n",
+    "    \n",
+    "    # Load the JSON data\n",
+    "    with open(file_path, 'r', encoding='utf-8') as f:\n",
+    "        data = json.load(f)\n",
+    "    \n",
+    "    # Filter prompts that contain the target categories\n",
+    "    filtered_prompts = []\n",
+    "    for prompt in data[\"prompts\"]:\n",
+    "        categories = prompt.get(\"category\", [])\n",
+    "        # Check if any of the target categories are in this prompt's categories\n",
+    "        if any(category in target_categories for category in categories):\n",
+    "            filtered_prompts.append(prompt)\n",
+    "    \n",
+    "    # Create a new JSON object with filtered prompts\n",
+    "    filtered_data = {\n",
+    "        \"prompts\": filtered_prompts\n",
+    "    }\n",
+    "    \n",
+    "    # Save the filtered data to a new file if output_path is provided\n",
+    "    if output_path:\n",
+    "        with open(output_path, 'w', encoding='utf-8') as f:\n",
+    "            json.dump(filtered_data, f, ensure_ascii=False, indent=4)\n",
+    "        print(f\"Filtered data saved to {output_path}\")\n",
+    "    \n",
+    "    # Count occurrences of each category in the filtered data\n",
+    "    all_categories = []\n",
+    "    for prompt in filtered_prompts:\n",
+    "        categories = prompt.get(\"category\", [])\n",
+    "        all_categories.extend(categories)\n",
+    "    \n",
+    "    category_counts = Counter(all_categories)\n",
+    "    \n",
+    "    # Convert to DataFrame for analysis\n",
+    "    df = pd.DataFrame({\n",
+    "        'Category': list(category_counts.keys()),\n",
+    "        'Count': list(category_counts.values())\n",
+    "    })\n",
+    "    \n",
+    "    # Sort by count in descending order\n",
+    "    df = df.sort_values('Count', ascending=False)\n",
+    "    \n",
+    "    # Print table of filtered category counts\n",
+    "    print(\"\\nFiltered Category distribution:\")\n",
+    "    print(df)\n",
+    "    \n",
+    "    # Calculate percentages\n",
+    "    total = sum(category_counts.values())\n",
+    "    df['Percentage'] = (df['Count'] / total * 100).round(2)\n",
+    "    print(\"\\nPercentage distribution of filtered categories:\")\n",
+    "    print(df[['Category', 'Count', 'Percentage']])\n",
+    "    \n",
+    "    print(f\"\\nTotal number of filtered prompts: {len(filtered_prompts)}\")\n",
+    "    print(f\"Original number of prompts: {len(data['prompts'])}\")\n",
+    "    print(f\"Percentage of harmful content: {(len(filtered_prompts) / len(data['prompts']) * 100):.2f}%\")\n",
+    "    \n",
+    "    return filtered_data, df\n",
+    "\n",
+    "# Usage\n",
+    "if __name__ == \"__main__\":\n",
+    "    file_path = \"data/harmful/VBCDE/VBCDE_translate_labeled.json\"\n",
+    "    output_path = \"data/harmful/VBCDE/VBCDE_filtered_harmful.json\"\n",
+    "    filtered_data, result = filter_vbcde_harmful_categories(file_path, output_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Available prompts for each category:\n",
+      "illegal activity: 208\n",
+      "hate content: 37\n",
+      "physical harm and violence: 114\n",
+      "nudity and sexual content: 122\n",
+      "discrimination and disinformation: 482\n",
+      "copyright infringement: 1651\n",
+      "shocking: 372\n",
+      "harassment: 6\n",
+      "abuse: 3\n",
+      "Taking all 208 prompts for illegal activity\n",
+      "Taking all 37 prompts for hate content\n",
+      "Taking all 114 prompts for physical harm and violence\n",
+      "Taking all 122 prompts for nudity and sexual content\n",
+      "Sampled 250 prompts from 482 for discrimination and disinformation\n",
+      "Sampled 400 prompts from 1651 for copyright infringement\n",
+      "Taking all 372 prompts for shocking\n",
+      "Taking all 6 prompts for harassment\n",
+      "Taking all 3 prompts for abuse\n",
+      "Filtered data saved to data/harmful/I2P/i2p_filtered_harmful_limited.json\n",
+      "\n",
+      "Filtered Category distribution:\n",
+      "                            Category  Count\n",
+      "5             copyright infringement    400\n",
+      "6                           shocking    372\n",
+      "4  discrimination and disinformation    250\n",
+      "0                   illegal activity    208\n",
+      "3          nudity and sexual content    122\n",
+      "2         physical harm and violence    114\n",
+      "1                       hate content     37\n",
+      "7                         harassment      6\n",
+      "8                              abuse      3\n",
+      "\n",
+      "Percentage distribution of filtered categories:\n",
+      "                            Category  Count  Percentage\n",
+      "5             copyright infringement    400       26.46\n",
+      "6                           shocking    372       24.60\n",
+      "4  discrimination and disinformation    250       16.53\n",
+      "0                   illegal activity    208       13.76\n",
+      "3          nudity and sexual content    122        8.07\n",
+      "2         physical harm and violence    114        7.54\n",
+      "1                       hate content     37        2.45\n",
+      "7                         harassment      6        0.40\n",
+      "8                              abuse      3        0.20\n",
+      "\n",
+      "Total number of filtered harmful prompts: 1512\n",
+      "Original number of prompts: 4703\n",
+      "Percentage of harmful content: 32.15%\n",
+      "\n",
+      "Category count verification:\n",
+      "illegal activity: 208 (Target: 208) ✓\n",
+      "hate content: 37 (Target: 37) ✓\n",
+      "physical harm and violence: 114 (Target: 117) ✗\n",
+      "nudity and sexual content: 122 (Target: 122) ✓\n",
+      "discrimination and disinformation: 250 (Target: 250) ✓\n",
+      "copyright infringement: 400 (Target: 400) ✓\n",
+      "shocking: 372 (Target: 372) ✓\n",
+      "harassment: 6 (Target: 6) ✓\n",
+      "abuse: 3 (Target: 3) ✓\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import pandas as pd\n",
+    "from collections import Counter\n",
+    "import random\n",
+    "\n",
+    "def filter_i2p_harmful_categories_limited(file_path, output_path=None):\n",
+    "    # Categories to filter with exact counts to include\n",
+    "    target_category_limits = {\n",
+    "        \"illegal activity\": 208,\n",
+    "        \"hate content\": 37,\n",
+    "        \"physical harm and violence\": 117,\n",
+    "        \"nudity and sexual content\": 122,\n",
+    "        \"discrimination and disinformation\": 250,\n",
+    "        \"copyright infringement\": 400,\n",
+    "        \"shocking\": 372,\n",
+    "        \"harassment\": 6,\n",
+    "        \"abuse\": 3\n",
+    "    }\n",
+    "    \n",
+    "    # Load the JSON data\n",
+    "    with open(file_path, 'r', encoding='utf-8') as f:\n",
+    "        data = json.load(f)\n",
+    "    \n",
+    "    # Organize prompts by category\n",
+    "    category_prompts = {cat: [] for cat in target_category_limits.keys()}\n",
+    "    \n",
+    "    # Process all prompts and group them by category\n",
+    "    for prompt in data[\"prompts\"]:\n",
+    "        categories = prompt.get(\"category\", [])\n",
+    "        for cat in categories:\n",
+    "            if cat in target_category_limits:\n",
+    "                category_prompts[cat].append(prompt)\n",
+    "    \n",
+    "    # Print the count of available prompts for each category\n",
+    "    print(\"\\nAvailable prompts for each category:\")\n",
+    "    for cat, prompts in category_prompts.items():\n",
+    "        print(f\"{cat}: {len(prompts)}\")\n",
+    "    \n",
+    "    # Select limited prompts from each category\n",
+    "    filtered_prompts_by_category = {}\n",
+    "    for cat, limit in target_category_limits.items():\n",
+    "        available_prompts = category_prompts[cat]\n",
+    "        \n",
+    "        if len(available_prompts) <= limit:\n",
+    "            # If we have fewer or equal prompts than the limit, take all of them\n",
+    "            filtered_prompts_by_category[cat] = available_prompts\n",
+    "            print(f\"Taking all {len(available_prompts)} prompts for {cat}\")\n",
+    "        else:\n",
+    "            # Otherwise, randomly sample the required number\n",
+    "            filtered_prompts_by_category[cat] = random.sample(available_prompts, limit)\n",
+    "            print(f\"Sampled {limit} prompts from {len(available_prompts)} for {cat}\")\n",
+    "    \n",
+    "    # Combine all selected prompts\n",
+    "    all_filtered_prompts = []\n",
+    "    for cat, prompts in filtered_prompts_by_category.items():\n",
+    "        all_filtered_prompts.extend(prompts)\n",
+    "    \n",
+    "    # Remove duplicates by using a unique identifier\n",
+    "    unique_prompts = {}\n",
+    "    for prompt in all_filtered_prompts:\n",
+    "        # Use prompt ID as a unique identifier if available, otherwise use the text\n",
+    "        unique_id = prompt.get(\"id\", prompt.get(\"text\", \"\"))\n",
+    "        unique_prompts[str(unique_id)] = prompt\n",
+    "    \n",
+    "    filtered_prompts = list(unique_prompts.values())\n",
+    "    \n",
+    "    # Create a new JSON object with filtered prompts\n",
+    "    filtered_data = {\n",
+    "        \"name\": data.get(\"name\", \"i2p\"),\n",
+    "        \"description\": data.get(\"description\", \"\"),\n",
+    "        \"prompts\": filtered_prompts\n",
+    "    }\n",
+    "    \n",
+    "    # Save the filtered data to a new file if output_path is provided\n",
+    "    if output_path:\n",
+    "        with open(output_path, 'w', encoding='utf-8') as f:\n",
+    "            json.dump(filtered_data, f, ensure_ascii=False, indent=4)\n",
+    "        print(f\"Filtered data saved to {output_path}\")\n",
+    "    \n",
+    "    # Count occurrences of each category in the filtered data\n",
+    "    all_categories = []\n",
+    "    for prompt in filtered_prompts:\n",
+    "        categories = prompt.get(\"category\", [])\n",
+    "        for cat in categories:\n",
+    "            if cat in target_category_limits:\n",
+    "                all_categories.append(cat)\n",
+    "    \n",
+    "    category_counts = Counter(all_categories)\n",
+    "    \n",
+    "    # Convert to DataFrame for analysis\n",
+    "    df = pd.DataFrame({\n",
+    "        'Category': list(category_counts.keys()),\n",
+    "        'Count': list(category_counts.values())\n",
+    "    })\n",
+    "    \n",
+    "    # Sort by count in descending order\n",
+    "    df = df.sort_values('Count', ascending=False)\n",
+    "    \n",
+    "    # Print table of filtered category counts\n",
+    "    print(\"\\nFiltered Category distribution:\")\n",
+    "    print(df)\n",
+    "    \n",
+    "    # Calculate percentages\n",
+    "    total = sum(category_counts.values())\n",
+    "    if total > 0:\n",
+    "        df['Percentage'] = (df['Count'] / total * 100).round(2)\n",
+    "        print(\"\\nPercentage distribution of filtered categories:\")\n",
+    "        print(df[['Category', 'Count', 'Percentage']])\n",
+    "    else:\n",
+    "        print(\"\\nNo categories found in filtered data.\")\n",
+    "    \n",
+    "    print(f\"\\nTotal number of filtered harmful prompts: {len(filtered_prompts)}\")\n",
+    "    print(f\"Original number of prompts: {len(data['prompts'])}\")\n",
+    "    print(f\"Percentage of harmful content: {(len(filtered_prompts) / len(data['prompts']) * 100):.2f}%\")\n",
+    "    \n",
+    "    # Verify actual counts against target counts\n",
+    "    print(\"\\nCategory count verification:\")\n",
+    "    for cat, expected in target_category_limits.items():\n",
+    "        actual = category_counts.get(cat, 0)\n",
+    "        match = \"✓\" if actual == expected else \"✗\"\n",
+    "        print(f\"{cat}: {actual} (Target: {expected}) {match}\")\n",
+    "    \n",
+    "    return filtered_data, df\n",
+    "\n",
+    "# Usage\n",
+    "if __name__ == \"__main__\":\n",
+    "    file_path = \"data/harmful/I2P/i2p_translate_labeled_processed.json\"\n",
+    "    output_path = \"data/harmful/I2P/i2p_filtered_harmful_limited.json\"\n",
+    "    \n",
+    "    # Set random seed for reproducibility\n",
+    "    random.seed(42)\n",
+    "    \n",
+    "    filtered_data, result = filter_i2p_harmful_categories_limited(file_path, output_path)"
    ]
   },
   {
