--- a/process_data.ipynb
+++ b/process_data.ipynb
@@ -1505,6 +1505,169 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Available prompts for each category:\n",
+      "nudity and sexual content: 0\n",
+      "shocking: 0\n",
+      "Taking all 0 prompts for nudity and sexual content\n",
+      "Taking all 0 prompts for shocking\n",
+      "Filtered data saved to data/harmful/civitai/civitai_filtered_harmful.json\n",
+      "\n",
+      "Filtered Category distribution:\n",
+      "Empty DataFrame\n",
+      "Columns: [Category, Count]\n",
+      "Index: []\n",
+      "\n",
+      "No categories found in filtered data.\n",
+      "\n",
+      "Total number of filtered harmful prompts: 0\n",
+      "Original number of prompts: 2000\n",
+      "Percentage of harmful content: 0.00%\n",
+      "\n",
+      "Category count verification:\n",
+      "nudity and sexual content: 0 (Target: 100) ✗\n",
+      "shocking: 0 (Target: 41) ✗\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import pandas as pd\n",
+    "from collections import Counter\n",
+    "import random\n",
+    "\n",
+    "def filter_civitai_harmful(file_path, output_path=None):\n",
+    "    # Categories to filter with exact counts to include\n",
+    "    target_category_limits = {\n",
+    "        \"nudity and sexual content\": 100,\n",
+    "        \"shocking\": 41\n",
+    "    }\n",
+    "    \n",
+    "    # Load the JSON data\n",
+    "    with open(file_path, 'r', encoding='utf-8') as f:\n",
+    "        data = json.load(f)\n",
+    "    \n",
+    "    # Organize prompts by category\n",
+    "    category_prompts = {cat: [] for cat in target_category_limits.keys()}\n",
+    "    \n",
+    "    # Process all prompts and group them by category\n",
+    "    for prompt in data[\"prompts\"]:\n",
+    "        categories = prompt.get(\"category\", [])\n",
+    "        for cat in categories:\n",
+    "            if cat in target_category_limits:\n",
+    "                category_prompts[cat].append(prompt)\n",
+    "    \n",
+    "    # Print the count of available prompts for each category\n",
+    "    print(\"\\nAvailable prompts for each category:\")\n",
+    "    for cat, prompts in category_prompts.items():\n",
+    "        print(f\"{cat}: {len(prompts)}\")\n",
+    "    \n",
+    "    # Select limited prompts from each category\n",
+    "    filtered_prompts_by_category = {}\n",
+    "    for cat, limit in target_category_limits.items():\n",
+    "        available_prompts = category_prompts[cat]\n",
+    "        \n",
+    "        if len(available_prompts) <= limit:\n",
+    "            # If we have fewer or equal prompts than the limit, take all of them\n",
+    "            filtered_prompts_by_category[cat] = available_prompts\n",
+    "            print(f\"Taking all {len(available_prompts)} prompts for {cat}\")\n",
+    "        else:\n",
+    "            # Otherwise, randomly sample the required number\n",
+    "            filtered_prompts_by_category[cat] = random.sample(available_prompts, limit)\n",
+    "            print(f\"Sampled {limit} prompts from {len(available_prompts)} for {cat}\")\n",
+    "    \n",
+    "    # Combine all selected prompts\n",
+    "    all_filtered_prompts = []\n",
+    "    for cat, prompts in filtered_prompts_by_category.items():\n",
+    "        all_filtered_prompts.extend(prompts)\n",
+    "    \n",
+    "    # Remove duplicates by using a unique identifier\n",
+    "    unique_prompts = {}\n",
+    "    for prompt in all_filtered_prompts:\n",
+    "        # Use prompt ID as a unique identifier if available, otherwise use the text\n",
+    "        unique_id = prompt.get(\"id\", prompt.get(\"text\", \"\"))\n",
+    "        unique_prompts[str(unique_id)] = prompt\n",
+    "    \n",
+    "    filtered_prompts = list(unique_prompts.values())\n",
+    "    \n",
+    "    # Create a new JSON object with filtered prompts\n",
+    "    filtered_data = {\n",
+    "        \"name\": data.get(\"name\", \"civitai_nsfw\"),\n",
+    "        \"description\": data.get(\"description\", \"\"),\n",
+    "        \"prompts\": filtered_prompts\n",
+    "    }\n",
+    "    \n",
+    "    # Save the filtered data to a new file if output_path is provided\n",
+    "    if output_path:\n",
+    "        with open(output_path, 'w', encoding='utf-8') as f:\n",
+    "            json.dump(filtered_data, f, ensure_ascii=False, indent=4)\n",
+    "        print(f\"Filtered data saved to {output_path}\")\n",
+    "    \n",
+    "    # Count occurrences of each category in the filtered data\n",
+    "    all_categories = []\n",
+    "    for prompt in filtered_prompts:\n",
+    "        categories = prompt.get(\"category\", [])\n",
+    "        for cat in categories:\n",
+    "            if cat in target_category_limits:\n",
+    "                all_categories.append(cat)\n",
+    "    \n",
+    "    category_counts = Counter(all_categories)\n",
+    "    \n",
+    "    # Convert to DataFrame for analysis\n",
+    "    df = pd.DataFrame({\n",
+    "        'Category': list(category_counts.keys()),\n",
+    "        'Count': list(category_counts.values())\n",
+    "    })\n",
+    "    \n",
+    "    # Sort by count in descending order\n",
+    "    df = df.sort_values('Count', ascending=False)\n",
+    "    \n",
+    "    # Print table of filtered category counts\n",
+    "    print(\"\\nFiltered Category distribution:\")\n",
+    "    print(df)\n",
+    "    \n",
+    "    # Calculate percentages\n",
+    "    total = sum(category_counts.values())\n",
+    "    if total > 0:\n",
+    "        df['Percentage'] = (df['Count'] / total * 100).round(2)\n",
+    "        print(\"\\nPercentage distribution of filtered categories:\")\n",
+    "        print(df[['Category', 'Count', 'Percentage']])\n",
+    "    else:\n",
+    "        print(\"\\nNo categories found in filtered data.\")\n",
+    "    \n",
+    "    print(f\"\\nTotal number of filtered harmful prompts: {len(filtered_prompts)}\")\n",
+    "    print(f\"Original number of prompts: {len(data['prompts'])}\")\n",
+    "    print(f\"Percentage of harmful content: {(len(filtered_prompts) / len(data['prompts']) * 100):.2f}%\")\n",
+    "    \n",
+    "    # Verify actual counts against target counts\n",
+    "    print(\"\\nCategory count verification:\")\n",
+    "    for cat, expected in target_category_limits.items():\n",
+    "        actual = category_counts.get(cat, 0)\n",
+    "        match = \"✓\" if actual == expected else \"✗\"\n",
+    "        print(f\"{cat}: {actual} (Target: {expected}) {match}\")\n",
+    "    \n",
+    "    return filtered_data, df\n",
+    "\n",
+    "# Usage\n",
+    "if __name__ == \"__main__\":\n",
+    "    file_path = \"data/harmful/civitai/civitai_nsfw_prompts_2000_classified.json\"\n",
+    "    output_path = \"data/harmful/civitai/civitai_filtered_harmful.json\"\n",
+    "    \n",
+    "    # Set random seed for reproducibility\n",
+    "    random.seed(42)\n",
+    "    \n",
+    "    filtered_data, result = filter_civitai_harmful(file_path, output_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
