--- a/process_data.ipynb
+++ b/process_data.ipynb
@@ -2137,6 +2137,90 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "处理文件: data/benign/diffusion_db/diffusion_db_benign_6000_translate.json\n",
+      "从 data/benign/diffusion_db/diffusion_db_benign_6000_translate.json 添加了 6000 条提示\n",
+      "处理文件: data/harmful/4chan/4chan_filtered_harmful.json\n",
+      "从 data/harmful/4chan/4chan_filtered_harmful.json 添加了 129 条提示\n",
+      "处理文件: data/harmful/I2P/I2P_filtered_harmful.json\n",
+      "从 data/harmful/I2P/I2P_filtered_harmful.json 添加了 1512 条提示\n",
+      "处理文件: data/harmful/VBCDE/VBCDE_filtered_harmful.json\n",
+      "从 data/harmful/VBCDE/VBCDE_filtered_harmful.json 添加了 101 条提示\n",
+      "处理文件: data/harmful/civitai/civitai_filtered_harmful.json\n",
+      "从 data/harmful/civitai/civitai_filtered_harmful.json 添加了 141 条提示\n",
+      "处理文件: data/harmful/diffusion_db/diffusion_db_filtered_harmful.json\n",
+      "从 data/harmful/diffusion_db/diffusion_db_filtered_harmful.json 添加了 900 条提示\n",
+      "处理文件: data/harmful/sneakyprompt/sneakyprompt_filtered_harmful.json\n",
+      "从 data/harmful/sneakyprompt/sneakyprompt_filtered_harmful.json 添加了 200 条提示\n",
+      "\n",
+      "合并完成，共有 8983 条提示记录\n",
+      "输出文件: text_checker_eval.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import os\n",
+    "\n",
+    "# 特定需要处理的JSON文件列表\n",
+    "file_paths = [\n",
+    "    'data/benign/diffusion_db/diffusion_db_benign_6000_translate.json',\n",
+    "    'data/harmful/4chan/4chan_filtered_harmful.json',\n",
+    "    'data/harmful/I2P/I2P_filtered_harmful.json',\n",
+    "    'data/harmful/VBCDE/VBCDE_filtered_harmful.json',\n",
+    "    'data/harmful/civitai/civitai_filtered_harmful.json',\n",
+    "    'data/harmful/diffusion_db/diffusion_db_filtered_harmful.json',\n",
+    "    'data/harmful/sneakyprompt/sneakyprompt_filtered_harmful.json'\n",
+    "]\n",
+    "\n",
+    "# 输出文件\n",
+    "output_file = 'text_checker_eval.json'\n",
+    "\n",
+    "# 初始化结果数据结构\n",
+    "merged_data = {\n",
+    "    \"name\": \"text_checker_eval\",\n",
+    "    \"description\": \"\",\n",
+    "    \"prompts\": []\n",
+    "}\n",
+    "\n",
+    "# 处理每个文件\n",
+    "for file_path in file_paths:\n",
+    "    try:\n",
+    "        print(f\"处理文件: {file_path}\")\n",
+    "        \n",
+    "        if not os.path.exists(file_path):\n",
+    "            print(f\"警告: 文件不存在 - {file_path}\")\n",
+    "            continue\n",
+    "            \n",
+    "        with open(file_path, 'r', encoding='utf-8') as f:\n",
+    "            data = json.load(f)\n",
+    "        \n",
+    "        # 只提取 prompts 列表\n",
+    "        if \"prompts\" in data:\n",
+    "            merged_data[\"prompts\"].extend(data[\"prompts\"])\n",
+    "            print(f\"从 {file_path} 添加了 {len(data['prompts'])} 条提示\")\n",
+    "        else:\n",
+    "            print(f\"警告: 文件 {file_path} 中没有找到 prompts 字段\")\n",
+    "    \n",
+    "    except Exception as e:\n",
+    "        print(f\"处理文件 {file_path} 时出错: {str(e)}\")\n",
+    "\n",
+    "# 保存合并后的数据\n",
+    "with open(output_file, 'w', encoding='utf-8') as f:\n",
+    "    json.dump(merged_data, f, ensure_ascii=False, indent=2)\n",
+    "\n",
+    "print(f\"\\n合并完成，共有 {len(merged_data['prompts'])} 条提示记录\")\n",
+    "print(f\"输出文件: {output_file}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
