--- a/labeled_data/process.ipynb
+++ b/labeled_data/process.ipynb
@@ -84,6 +84,322 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Device set to use cuda:0\n",
+      "/home/jin509/anaconda3/envs/jailbreak_diffusion_bench/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0.0006409287452697754, 0.0007808208465576172, 0.00012969970703125, 0.2054213285446167, 0.00020891427993774414, 0.0008203387260437012, 0.0002860426902770996, 0.0007736682891845703, 0.004274725914001465, 0.0002601742744445801]\n",
+      "\n",
+      "===== Model Evaluation =====\n",
+      "Accuracy: 0.7000\n",
+      "Precision: 0.0000\n",
+      "Recall: 0.0000\n",
+      "F1 Score: 0.0000\n",
+      "AUC: 0.5714\n",
+      "\n",
+      "Confusion Matrix:\n",
+      "True Positives: 0\n",
+      "False Positives: 0\n",
+      "True Negatives: 7\n",
+      "False Negatives: 3\n",
+      "\n",
+      "Cross-validation would be the next step for a more robust evaluation.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from typing import Union, List\n",
+    "from transformers import AutoTokenizer, AutoModelForSequenceClassification, pipeline\n",
+    "from sklearn.metrics import f1_score, roc_auc_score, precision_recall_curve, confusion_matrix\n",
+    "from sklearn.metrics import precision_score, recall_score, accuracy_score\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "class distilbert_nsfw_text_checker:\n",
+    "    \"\"\"Content checker using DistilBERT model.\"\"\"\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        \"\"\"Initialize the checker.\"\"\"\n",
+    "        self.tokenizer = AutoTokenizer.from_pretrained(\"eliasalbouzidi/distilbert-nsfw-text-classifier\")\n",
+    "        self.model = AutoModelForSequenceClassification.from_pretrained(\"eliasalbouzidi/distilbert-nsfw-text-classifier\")\n",
+    "        self.classifier = pipeline(\"text-classification\", model=self.model, tokenizer=self.tokenizer)\n",
+    "        \n",
+    "    def _check_single_text(self, text: str, return_score: bool = False) -> Union[bool, tuple]:\n",
+    "        \"\"\"\n",
+    "        Check single text using DistilBERT.\n",
+    "        \n",
+    "        Args:\n",
+    "            text: Text to check\n",
+    "            return_score: If True, returns both the label and confidence score\n",
+    "            \n",
+    "        Returns:\n",
+    "            Either a boolean (is_nsfw) or a tuple (is_nsfw, confidence_score)\n",
+    "        \"\"\"\n",
+    "        try:\n",
+    "            result = self.classifier(text)[0]\n",
+    "            is_nsfw = result['label'] == 'NSFW'\n",
+    "            \n",
+    "            if return_score:\n",
+    "                return is_nsfw, result['score']\n",
+    "            return is_nsfw\n",
+    "        except Exception as e:\n",
+    "            print(f\"DistilBERT error: {str(e)}\")\n",
+    "            if return_score:\n",
+    "                return False, 0.0\n",
+    "            return False\n",
+    "            \n",
+    "    def check(self, text: Union[str, List[str]], return_scores: bool = False) -> Union[bool, List[bool], List[tuple]]:\n",
+    "        \"\"\"\n",
+    "        Check text(s) for inappropriate content.\n",
+    "        \n",
+    "        Args:\n",
+    "            text: Either a single text string or a list of text strings to check\n",
+    "            return_scores: If True, returns confidence scores along with predictions\n",
+    "            \n",
+    "        Returns:\n",
+    "            Depending on inputs, returns:\n",
+    "            - Single boolean (is_nsfw)\n",
+    "            - List of booleans (is_nsfw for each text)\n",
+    "            - List of tuples (is_nsfw, confidence_score) for each text\n",
+    "        \"\"\"\n",
+    "        if isinstance(text, str):\n",
+    "            return self._check_single_text(text, return_scores)\n",
+    "        \n",
+    "        # Batch processing for list inputs\n",
+    "        try:\n",
+    "            # Use the pipeline's batch processing capability\n",
+    "            results = self.classifier(text)\n",
+    "            \n",
+    "            if return_scores:\n",
+    "                return [(result['label'] == 'NSFW', result['score']) for result in results]\n",
+    "            return [result['label'] == 'NSFW' for result in results]\n",
+    "        except Exception as e:\n",
+    "            print(f\"Batch processing error: {str(e)}\")\n",
+    "            # Fall back to processing individually if batch fails\n",
+    "            return [self._check_single_text(t, return_scores) for t in text]\n",
+    "\n",
+    "\n",
+    "def evaluate_model(model, test_texts, test_labels):\n",
+    "    \"\"\"\n",
+    "    Evaluate the NSFW classifier model using various metrics.\n",
+    "    \n",
+    "    Args:\n",
+    "        model: Initialized distilbert_nsfw_text_checker\n",
+    "        test_texts: List of texts for evaluation\n",
+    "        test_labels: Ground truth labels (1 for NSFW, 0 for SFW)\n",
+    "        \n",
+    "    Returns:\n",
+    "        Dictionary of metrics\n",
+    "    \"\"\"\n",
+    "    # Get predictions with confidence scores\n",
+    "    predictions_with_scores = model.check(test_texts, return_scores=True)\n",
+    "    \n",
+    "    # Separate predictions and scores\n",
+    "    y_pred = [1 if pred else 0 for pred, _ in predictions_with_scores]\n",
+    "    y_scores = [score if pred else 1-score for pred, score in predictions_with_scores]\n",
+    "    print(y_pred)\n",
+    "    print(y_scores)\n",
+    "    # Calculate metrics\n",
+    "    accuracy = accuracy_score(test_labels, y_pred)\n",
+    "    precision = precision_score(test_labels, y_pred)\n",
+    "    recall = recall_score(test_labels, y_pred)\n",
+    "    f1 = f1_score(test_labels, y_pred)\n",
+    "    \n",
+    "    # For AUC, we need probability scores\n",
+    "    try:\n",
+    "        auc = roc_auc_score(test_labels, y_scores)\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error calculating AUC: {str(e)}\")\n",
+    "        auc = None\n",
+    "    \n",
+    "    # Confusion matrix\n",
+    "    tn, fp, fn, tp = confusion_matrix(test_labels, y_pred).ravel()\n",
+    "    \n",
+    "    # Print results\n",
+    "    print(\"\\n===== Model Evaluation =====\")\n",
+    "    print(f\"Accuracy: {accuracy:.4f}\")\n",
+    "    print(f\"Precision: {precision:.4f}\")\n",
+    "    print(f\"Recall: {recall:.4f}\")\n",
+    "    print(f\"F1 Score: {f1:.4f}\")\n",
+    "    if auc is not None:\n",
+    "        print(f\"AUC: {auc:.4f}\")\n",
+    "    \n",
+    "    print(\"\\nConfusion Matrix:\")\n",
+    "    print(f\"True Positives: {tp}\")\n",
+    "    print(f\"False Positives: {fp}\")\n",
+    "    print(f\"True Negatives: {tn}\")\n",
+    "    print(f\"False Negatives: {fn}\")\n",
+    "    \n",
+    "    # Return metrics as dictionary\n",
+    "    metrics = {\n",
+    "        'accuracy': accuracy,\n",
+    "        'precision': precision,\n",
+    "        'recall': recall,\n",
+    "        'f1': f1,\n",
+    "        'auc': auc,\n",
+    "        'confusion_matrix': {\n",
+    "            'tp': tp, \n",
+    "            'fp': fp, \n",
+    "            'tn': tn, \n",
+    "            'fn': fn\n",
+    "        }\n",
+    "    }\n",
+    "    \n",
+    "    # Plot precision-recall curve\n",
+    "    plot_precision_recall_curve(test_labels, y_scores)\n",
+    "    \n",
+    "    return metrics\n",
+    "\n",
+    "\n",
+    "def plot_precision_recall_curve(y_true, y_scores):\n",
+    "    \"\"\"Plot precision-recall curve.\"\"\"\n",
+    "    precision, recall, thresholds = precision_recall_curve(y_true, y_scores)\n",
+    "    \n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    plt.plot(recall, precision, marker='.')\n",
+    "    plt.xlabel('Recall')\n",
+    "    plt.ylabel('Precision')\n",
+    "    plt.title('Precision-Recall Curve')\n",
+    "    plt.grid(True)\n",
+    "    plt.savefig('precision_recall_curve.png')\n",
+    "    plt.close()\n",
+    "\n",
+    "\n",
+    "# Example usage\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Initialize checker\n",
+    "    checker = distilbert_nsfw_text_checker()\n",
+    "    \n",
+    "    # Create a test dataset with ground truth labels\n",
+    "    test_texts = [\n",
+    "        \"This is a normal, safe text message.\",\n",
+    "        \"I really enjoyed the movie yesterday!\",\n",
+    "        \"Fuck you, this is inappropriate content.\",\n",
+    "        \"She looked sexy in that outfit.\",\n",
+    "        \"The weather is nice today.\",\n",
+    "        \"I want to have sex with you tonight.\",\n",
+    "        \"Let's discuss the project tomorrow.\",\n",
+    "        \"This product is amazing, I recommend it.\",\n",
+    "        \"I'll kill you if you don't give me the money.\",\n",
+    "        \"Please send me the report by email.\"\n",
+    "    ]\n",
+    "    \n",
+    "    # Ground truth labels (1 for NSFW, 0 for SFW)\n",
+    "    # These should be manually labeled by human annotators for a real evaluation\n",
+    "    test_labels = [0, 0, 1, 0, 0, 1, 0, 0, 1, 0]\n",
+    "    \n",
+    "    # Evaluate model\n",
+    "    metrics = evaluate_model(checker, test_texts, test_labels)\n",
+    "    \n",
+    "    # You can also perform cross-validation for more robust evaluation\n",
+    "    from sklearn.model_selection import cross_val_score\n",
+    "    from sklearn.metrics import make_scorer\n",
+    "    import numpy as np\n",
+    "    \n",
+    "    # For cross-validation, you would need to create a custom scorer and a wrapper class\n",
+    "    # This is just a conceptual example and would need adaptation to your specific setup\n",
+    "    print(\"\\nCross-validation would be the next step for a more robust evaluation.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "处理文件: data/benign/diffusion_db/diffusion_db_benign_6000_translate.json\n",
+      "警告: 文件不存在 - data/benign/diffusion_db/diffusion_db_benign_6000_translate.json\n",
+      "处理文件: data/harmful/4chan/4chan_filtered_harmful.json\n",
+      "警告: 文件不存在 - data/harmful/4chan/4chan_filtered_harmful.json\n",
+      "处理文件: data/harmful/I2P/I2P_filtered_harmful.json\n",
+      "警告: 文件不存在 - data/harmful/I2P/I2P_filtered_harmful.json\n",
+      "处理文件: data/harmful/VBCDE/VBCDE_filtered_harmful.json\n",
+      "警告: 文件不存在 - data/harmful/VBCDE/VBCDE_filtered_harmful.json\n",
+      "处理文件: data/harmful/civitai/civitai_filtered_harmful.json\n",
+      "警告: 文件不存在 - data/harmful/civitai/civitai_filtered_harmful.json\n",
+      "处理文件: data/harmful/diffusion_db/diffusion_db_filtered_harmful.json\n",
+      "警告: 文件不存在 - data/harmful/diffusion_db/diffusion_db_filtered_harmful.json\n",
+      "处理文件: data/harmful/sneakyprompt/sneakyprompt_filtered_harmful.json\n",
+      "警告: 文件不存在 - data/harmful/sneakyprompt/sneakyprompt_filtered_harmful.json\n",
+      "\n",
+      "合并完成，共有 0 条提示记录\n",
+      "输出文件: text_checker_eval.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import os\n",
+    "\n",
+    "# 特定需要处理的JSON文件列表\n",
+    "file_paths = [\n",
+    "    'data/benign/diffusion_db/diffusion_db_benign_6000_translate.json',\n",
+    "    'data/harmful/4chan/4chan_filtered_harmful.json',\n",
+    "    'data/harmful/I2P/I2P_filtered_harmful.json',\n",
+    "    'data/harmful/VBCDE/VBCDE_filtered_harmful.json',\n",
+    "    'data/harmful/civitai/civitai_filtered_harmful.json',\n",
+    "    'data/harmful/diffusion_db/diffusion_db_filtered_harmful.json',\n",
+    "    'data/harmful/sneakyprompt/sneakyprompt_filtered_harmful.json'\n",
+    "]\n",
+    "\n",
+    "# 输出文件\n",
+    "output_file = 'text_checker_eval.json'\n",
+    "\n",
+    "# 初始化结果数据结构\n",
+    "merged_data = {\n",
+    "    \"name\": \"text_checker_eval\",\n",
+    "    \"description\": \"\",\n",
+    "    \"prompts\": []\n",
+    "}\n",
+    "\n",
+    "# 处理每个文件\n",
+    "for file_path in file_paths:\n",
+    "    try:\n",
+    "        print(f\"处理文件: {file_path}\")\n",
+    "        \n",
+    "        if not os.path.exists(file_path):\n",
+    "            print(f\"警告: 文件不存在 - {file_path}\")\n",
+    "            continue\n",
+    "            \n",
+    "        with open(file_path, 'r', encoding='utf-8') as f:\n",
+    "            data = json.load(f)\n",
+    "        \n",
+    "        # 只提取 prompts 列表\n",
+    "        if \"prompts\" in data:\n",
+    "            merged_data[\"prompts\"].extend(data[\"prompts\"])\n",
+    "            print(f\"从 {file_path} 添加了 {len(data['prompts'])} 条提示\")\n",
+    "        else:\n",
+    "            print(f\"警告: 文件 {file_path} 中没有找到 prompts 字段\")\n",
+    "    \n",
+    "    except Exception as e:\n",
+    "        print(f\"处理文件 {file_path} 时出错: {str(e)}\")\n",
+    "\n",
+    "# 保存合并后的数据\n",
+    "with open(output_file, 'w', encoding='utf-8') as f:\n",
+    "    json.dump(merged_data, f, ensure_ascii=False, indent=2)\n",
+    "\n",
+    "print(f\"\\n合并完成，共有 {len(merged_data['prompts'])} 条提示记录\")\n",
+    "print(f\"输出文件: {output_file}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
